SRFCMSAL-1564 - Fix overlapping background image for unboxed collection style on mobile

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -272,6 +272,7 @@ $background-overlap-wide: 50px;
   flex-direction: column;
   margin: 0 8px 12px;
   padding: 0;
+  position: relative;
 
   @include tablet-up {
     flex-direction: row;
